tests/should_fail/type_generic_struct_field_mismatch.nv
module type_wrong_generic_arg

import super.std.core

struct Wrapper(T) {
    value: $T,
}

// Wrapper expects one type param, but we pass wrong type to field
let w: Wrapper(Int) = Wrapper { value: "hello" }
